Fix background color overflow in rubric table.

--- a/css/portal-dashboard/feedback/rubric-table.less
+++ b/css/portal-dashboard/feedback/rubric-table.less
@@ -7,6 +7,7 @@
   margin: 10px 0;
   width: 100%;
   font-size: 14px;
+  overflow: hidden;
 
   .columnHeaders {
     height: 45px;
